login and generate token
