# swagger.json
@@ -337,7 +337,35 @@
                     }
                 }
             }
-        } 
+        },
+        "/api/user/login": {
+            "post": {
+                "tags": ["User"],
+                "summary": "User Login API",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "email",
+                        "type": "string"
+                    },
+                    {
+                        "name": "password",
+                        "in": "formData",
+                        "description": "password",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ServiceResponse"
+                        }
+                    }
+                }
+            }
+        }
     },
     "definitions": {
         "Category": {
